// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text/> Should render a Text element with default props 1`] = `
<p
  className="text__Text-sc-109mrig-0 dgcKge"
  color="dark"
  size="medium"
>
  Text Paragraph
</p>
`;

exports[`<Text/> Should render a Text element with given props 1`] = `
<p
  className="text__Text-sc-109mrig-0 cceaSe"
  color="light"
  size="medium"
>
  Text Paragraph
</p>
`;
